Default body style

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js" defer></script>
 
-    <title>Kodilla Module 3 exercise 4</title>
+    <title>Kodilla Module 4 Rock, Paper, Scissors!</title>
   </head>
   <body></body>
 </html>
