Demonstrate use of a variable

--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="vendor\bootstrap-5.3.2-dist\css\bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="vendor/css/bootstrap.min.css" />
 
-    <script
-      src="vendor\bootstrap-5.3.2-dist\js\bootstrap.min.js"
-      defer
-    ></script>
+    <script src="vendor/js/bootstrap.min.js" defer></script>
 
     <!-- Font Awesome -->
     <link
@@ -24,9 +18,15 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/functions.js" defer></script>
     <script src="js/script.js" defer></script>
 
     <title>Kodilla Module 4 Rock, Paper, Scissors!</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div id="buttons"></div>
+      <div id="messages"></div>
+    </div>
+  </body>
 </html>
