--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/functions.js" defer></script>
+    <script src="js/game.js" defer></script>
     <script src="js/script.js" defer></script>
 
     <title>Kodilla Module 4 Rock, Paper, Scissors!</title>
