--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="vendor/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="vendor/css/bootstrap.min.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script src="vendor/js/bootstrap.min.js" defer></script> -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script> -->
 
-    <script src="vendor/js/bootstrap.min.js" defer></script>
+    <!-- Bootstrap 5 CSS -->
+    <link
+      rel="stylesheet"
+      href="node_modules\bootstrap\dist\css\bootstrap.min.css"
+    />
+    <script
+      src="node_modules\bootstrap\dist\js\bootstrap.bundle.js"
+      defer
+    ></script>
 
     <!-- Font Awesome -->
     <link
@@ -26,8 +56,102 @@
   </head>
   <body>
     <div class="container">
-      <div id="buttons"></div>
-      <div id="messages"></div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1>Rock, Paper, Scissors!</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4 text-center">
+          <h1>Player1</h1>
+          <!-- bootstratp dropdown -->
+          <h1>Select Strategy:</h1>
+          <select
+            class="form-select form-select-sm"
+            aria-label=".form-select-sm example"
+            id="player1Strategy"
+          >
+            <option value="Ask">Ask for the move</option>
+            <option value="Random">Random</option>
+            <option value="AlwaysRock">Always Rock</option>
+            <option value="AlwaysPaper">Always Paper</option>
+            <option value="AlwaysScissors">Always Scissors</option>
+          </select>
+        </div>
+        <div class="col-4 text-center">
+          <button id="startGameButton">Start the game</button>
+          <!-- input field with default value = 3 -->
+          <input
+            class="form-control"
+            type="number"
+            placeholder="Number of rounds"
+            aria-label="default input example"
+            id="numberOfRounds"
+          />
+
+          <button id="resetGameButton" disabled>Reset the game</button>
+        </div>
+        <div class="col-4 text-center">
+          <h1>Player2</h1>
+          <h1>Select Strategy:</h1>
+          <select
+            class="form-select form-select-sm"
+            aria-label=".form-select-sm example"
+            id="player2Strategy"
+          >
+            <option value="Random">Random</option>
+            <option value="AlwaysRock">Always Rock</option>
+            <option value="AlwaysPaper">Always Paper</option>
+            <option value="AlwaysScissors">Always Scissors</option>
+          </select>
+        </div>
+      </div>
+      <div id="game">
+        <div class="row">
+          <div class="col-4 text-center">
+            <div class="player1-controls" disabled>
+              <h1>Player 1 section</h1>
+              <button id="rockButton1" disabled>
+                <i class="fas fa-hand-rock"></i>
+                Rock
+              </button>
+              <button id="paperButton1" disabled>
+                <i class="fas fa-hand-paper"></i>
+                Paper
+              </button>
+              <button id="scissorsButton1" disabled>
+                <i class="fas fa-hand-scissors"></i>
+                Scissors
+              </button>
+            </div>
+          </div>
+          <div class="col-4 text-center">
+            <h1>Game Score</h1>
+            <div id="score">0 : 0</div>
+          </div>
+          <div class="col-4 text-center">
+            <div class="player2-controls" disabled>
+              <h1>Player 2 section</h1>
+              <button id="rockButton2" disabled>
+                <i class="fas fa-hand-rock"></i>
+                Rock
+              </button>
+              <button id="paperButton2" disabled>
+                <i class="fas fa-hand-paper"></i>
+                Paper
+              </button>
+              <button id="scissorsButton2" disabled>
+                <i class="fas fa-hand-scissors"></i>
+                Scissors
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="console">
+        <h1>Messages</h1>
+        <div id="messages"></div>
+      </div>
     </div>
   </body>
 </html>
