--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   </head>
   <body>
     <div class="container">
-      <div id="buttons"></div>
+      <div id="buttons">
+        <button id="play-rock">Rock</button>
+        <button id="play-paper">Paper</button>
+        <button id="play-scissors">Scissors</button>
+      </div>
       <div id="messages"></div>
     </div>
   </body>
